--- a/lesson9-weather/scss/_small.scss
+++ b/lesson9-weather/scss/_small.scss
@@ -523,4 +523,8 @@ footer {
     color: #fff;
     text-align: center;
     background-color: var(--color-navigation-hover);
+
+    a {
+        color: white;
+    }
 }
