--- a/lesson9-weather/css/small.css
+++ b/lesson9-weather/css/small.css
@@ -1,30 +1,30 @@
 :root {
-    --color-blue: #052A51;
-    --color-blue-light: #A2BBD7;
-    --color-yellow: #F4D35E;
-    --color-yellow-light: #ebebd3;
-    --color-notification-background: #F4D35E;
-    --color-navigation-link: #F4D35E;
-    --color-navigation-background: #083d77;
-    --color-navigation-hover: #052A51;
+  --color-blue: #052A51;
+  --color-blue-light: #A2BBD7;
+  --color-yellow: #F4D35E;
+  --color-yellow-light: #ebebd3;
+  --color-notification-background: #F4D35E;
+  --color-navigation-link: #F4D35E;
+  --color-navigation-background: #083d77;
+  --color-navigation-hover: #052A51;
 }
 
 * {
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
 }
 
 body {
-    font-family: "Open Sans", sans-serif;
-    background-color: #ebebd3;
+  font-family: "Open Sans", sans-serif;
+  background-color: #ebebd3;
 }
 
 h1,
@@ -33,443 +33,403 @@ h3,
 h4,
 h5,
 h6 {
-    margin: 0;
-    padding: 0;
-    font-size: 1em;
+  margin: 0;
+  padding: 0;
+  font-size: 1em;
 }
 
 h2 {
-    font-size: 1.5em;
-    margin-bottom: 10px;
+  font-size: 1.5em;
+  margin-bottom: 10px;
 }
 
 header {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    height: 60px;
-    padding: 0 15px;
-    background-color: var(--color-blue-light);
-    border-top: 1px solid var(--color-navigation-background);
-    border-bottom: 1px solid var(--color-navigation-background);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  height: 60px;
+  padding: 0 15px;
+  background-color: var(--color-blue-light);
+  border-top: 1px solid var(--color-navigation-background);
+  border-bottom: 1px solid var(--color-navigation-background);
 }
-
 header #branding {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 100%;
 }
-
 header #logo {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    justify-content: center;
-    height: 100%;
-    margin-right: 15px;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  height: 100%;
+  margin-right: 15px;
 }
-
 header #logo img {
-    height: 80%;
+  height: 80%;
 }
-
 header #letterhead {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
 }
-
 header #letterhead h1 {
-    font-size: 1.4em;
-    font-weight: bold;
+  font-size: 1.4em;
+  font-weight: bold;
 }
-
 header #letterhead span {
-    font-size: 0.8em;
-    font-style: italic;
+  font-size: 0.8em;
+  font-style: italic;
 }
-
 header #hamburger {
-    align-content: flex-end;
-    font-size: 1.7em;
-    cursor: pointer;
+  align-content: flex-end;
+  font-size: 1.7em;
+  cursor: pointer;
 }
-
 header .responsive {
-    transform: rotate(90deg);
+  transform: rotate(90deg);
 }
 
 nav {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 0px;
-    background-color: var(--color-navigation-background);
-    user-select: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 0px;
+  background-color: var(--color-navigation-background);
+  user-select: none;
 }
-
 nav ul {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  text-align: center;
 }
-
 nav ul li {
-    display: none;
-    padding: 0;
-    width: 100%;
+  display: none;
+  padding: 0;
+  width: 100%;
 }
-
 nav a,
 nav a:visited {
-    display: block;
-    width: 100%;
-    height: 100%;
-    padding: 15px 0;
-    color: #fff;
-    text-decoration: none;
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding: 15px 0;
+  color: #fff;
+  text-decoration: none;
 }
-
 nav a:hover {
-    color: var(--color-navigation-link);
-    background-color: var(--color-navigation-hover);
+  color: var(--color-navigation-link);
+  background-color: var(--color-navigation-hover);
 }
-
 nav a.active {
-    background-color: #052A51;
+  background-color: #052A51;
 }
-
 nav ul.responsive li {
-    display: block;
-    width: 100%;
+  display: block;
+  width: 100%;
 }
 
 main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 0 auto;
-    padding-top: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  padding-top: 15px;
 }
-
 main h2 {
-    margin-bottom: 1rem;
-    font-size: 2em;
-    text-align: center;
+  margin-bottom: 1rem;
+  font-size: 2em;
+  text-align: center;
 }
-
 main picture {
-    width: 100%;
+  width: 100%;
 }
-
 main picture img {
-    width: 100%;
+  width: 100%;
 }
 
 main.gallery {
-    display: grid;
-    grid-template-columns: 1fr;
-    column-gap: 20px;
-    row-gap: 20px;
-    margin-bottom: 50px;
+  display: grid;
+  grid-template-columns: 1fr;
+  column-gap: 20px;
+  row-gap: 20px;
+  margin-bottom: 50px;
 }
-
 main.gallery .image-card {
-    padding: 10px;
-    background-color: white;
+  padding: 10px;
+  background-color: white;
 }
-
 main.gallery .image-card img {
-    width: 100%;
-    margin-bottom: 5px;
+  width: 100%;
+  margin-bottom: 5px;
 }
-
 main.gallery img[data-src] {
-    filter: blur(0.2em);
+  filter: blur(0.2em);
 }
-
 main.gallery img {
-    filter: blur(0em);
-    transition: filter 0.5s;
+  filter: blur(0em);
+  transition: filter 0.5s;
 }
 
 main.thankyou h1 {
-    font-size: 5em;
-    margin-bottom: 1rem;
+  font-size: 5em;
+  margin-bottom: 1rem;
 }
-
 main.thankyou p {
-    text-align: center;
+  text-align: center;
 }
 
 .town-cards {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 15px;
-    row-gap: 15px;
-    color: white;
-    width: 100%;
-    margin: 15px 0;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 15px;
+  row-gap: 15px;
+  color: white;
+  width: 100%;
+  margin: 15px 0;
 }
-
 .town-cards .town-card {
-    grid-column: span 2;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 10px;
-    background-color: #083d77;
+  grid-column: span 2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  background-color: #083d77;
 }
-
 .town-cards .town-card .town-card-information {
-    width: 100%;
-    margin-bottom: 20px;
-    text-align: center;
+  width: 100%;
+  margin-bottom: 20px;
+  text-align: center;
 }
-
 .town-cards .town-card .town-card-information h3 {
-    font-size: 2.5em;
-    line-height: 1.5em;
-    text-align: center;
+  font-size: 2.5em;
+  line-height: 1.5em;
+  text-align: center;
 }
-
 .town-cards .town-card .town-card-information span {
-    display: block;
-    line-height: 1.7em;
+  display: block;
+  line-height: 1.7em;
 }
-
 .town-cards .town-card .town-card-information span.town-motto {
-    margin-bottom: 30px;
-    font-style: italic;
+  margin-bottom: 30px;
+  font-style: italic;
 }
-
 .town-cards .town-card .town-card-image img {
-    width: 100%;
+  width: 100%;
 }
 
 #hero {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: repeat(1, 1fr);
-    row-gap: 15px;
-    margin-bottom: 30px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: repeat(1, 1fr);
+  row-gap: 15px;
+  margin-bottom: 30px;
 }
-
 #hero picture {
-    grid-column-start: 1;
-    grid-column-end: 5;
-    grid-row-start: 1;
-    grid-row-end: 4;
-    z-index: 0;
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 1;
+  grid-row-end: 4;
+  z-index: 0;
 }
-
 #hero picture img {
-    width: 100%;
+  width: 100%;
 }
-
 #hero #current-temperature {
-    grid-column-start: 1;
-    grid-column-end: 5;
-    grid-row-start: 4;
-    grid-row-end: 5;
-    margin-bottom: 15px;
-    padding: 10px;
-    color: white;
-    background-color: rgba(0, 50, 0, 0.9);
-    z-index: 2;
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 4;
+  grid-row-end: 5;
+  margin-bottom: 15px;
+  padding: 10px;
+  color: white;
+  background-color: rgba(0, 50, 0, 0.9);
+  z-index: 2;
 }
 
 #hero table {
-    width: 100%;
+  width: 100%;
 }
 
 #hero table th {
-    padding-bottom: 5px;
-    border-bottom: 1px solid white;
+  padding-bottom: 5px;
+  border-bottom: 1px solid white;
 }
 
 #hero table tr:nth-child(1) td {
-    padding-top: 10px;
+  padding-top: 10px;
 }
 
 #hero table td:nth-child(1) {
-    width: 50%;
-    padding-right: 5px;
-    text-align: right;
+  width: 50%;
+  padding-right: 5px;
+  text-align: right;
 }
 
 #hero table td:nth-child(2) {
-    color: var(--color-yellow);
+  color: var(--color-yellow);
 }
 
 #forecast {
-    display: none;
+  display: none;
 }
 
 #article {
-    padding: 50px;
-    background-color: white;
-    border-radius: 5px;
-    margin-bottom: 30px;
+  padding: 50px;
+  background-color: white;
+  border-radius: 5px;
+  margin-bottom: 30px;
 }
 
 #article h2 {
-    margin-bottom: 1em;
+  margin-bottom: 1em;
 }
 
 #article img {
-    width: 100%;
-    margin-bottom: 30px;
+  width: 100%;
+  margin-bottom: 30px;
 }
 
 #article p {
-    margin-bottom: 1.7em;
-    line-height: 1.7em;
+  margin-bottom: 1.7em;
+  line-height: 1.7em;
 }
 
 #contact {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 15px;
-    color: #fff;
-    background-color: var(--color-navigation-background);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 15px;
+  color: #fff;
+  background-color: var(--color-navigation-background);
 }
 
 #contact div {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 #contact h2 {
-    margin-bottom: 10px;
-    font-size: 2em;
+  margin-bottom: 10px;
+  font-size: 2em;
 }
 
 #contact p {
-    font-size: 1em;
-    line-height: 1.7em;
+  font-size: 1em;
+  line-height: 1.7em;
 }
 
 #contact img {
-    display: none;
+  display: none;
 }
 
 .updated {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 
 form {
-    display: block;
-    width: 100%;
-    text-align: left;
+  display: block;
+  width: 100%;
+  text-align: left;
 }
-
 form fieldset {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    margin: 2rem 0;
-    padding: 2rem 5%;
-    border: 1px solid var(--color-blue);
-    border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin: 2rem 0;
+  padding: 2rem 5%;
+  border: 1px solid var(--color-blue);
+  border-radius: 5px;
 }
-
 form fieldset legend {
-    color: var(--color-blue);
-    margin: 0 1rem;
-    padding: 0 0.5rem;
+  color: var(--color-blue);
+  margin: 0 1rem;
+  padding: 0 0.5rem;
 }
-
 form input,
 form select,
 form span {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
-
 form label.top input,
 form label.top select {
-    -webkit-appearance: none;
-    display: block;
-    width: 100%;
-    font-size: 1rem;
-    padding: 0.75rem;
-    border: 1px solid var(--color-blue);
-    border-radius: 4px;
-    color: #555;
+  -webkit-appearance: none;
+  display: block;
+  width: 100%;
+  font-size: 1rem;
+  padding: 0.75rem;
+  border: 1px solid var(--color-blue);
+  border-radius: 4px;
+  color: #555;
 }
-
 form label.top,
 form div,
 form textarea {
-    display: block;
-    padding-top: 0.5rem;
-    color: red;
-    font-size: 0.8rem;
+  display: block;
+  padding-top: 0.5rem;
+  color: red;
+  font-size: 0.8rem;
 }
-
 form label.sbs {
-    display: block;
-    padding: 0.75rem;
-    color: #555;
+  display: block;
+  padding: 0.75rem;
+  color: #555;
 }
-
 form input.submit-button {
-    width: 100%;
-    margin: 0 0 2rem 0;
-    padding: 0.75rem 1.5rem;
-    border: none;
-    background: var(--color-blue);
-    color: white;
-    border-radius: 0.5rem;
+  width: 100%;
+  margin: 0 0 2rem 0;
+  padding: 0.75rem 1.5rem;
+  border: none;
+  background: var(--color-blue);
+  color: white;
+  border-radius: 0.5rem;
 }
-
 form input.submit-button:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
-
 form label.top input:required {
-    border-left: red solid 6px;
+  border-left: red solid 6px;
 }
-
 form label.top input:required:valid {
-    border-left: green solid 6px;
+  border-left: green solid 6px;
 }
-
 form textarea {
-    font-family: monospace;
-    font-size: 1.5em;
-    line-height: 1.5em;
-    padding: 1rem;
-    color: black;
-    display: block;
-    width: 100%;
-    height: 15rem;
+  font-family: monospace;
+  font-size: 1.5em;
+  line-height: 1.5em;
+  padding: 1rem;
+  color: black;
+  display: block;
+  width: 100%;
+  height: 15rem;
 }
-
 form #currentRating {
-    font-size: 2em;
+  font-size: 2em;
 }
 
 footer {
-    width: 100%;
-    margin: 0 auto;
-    padding: 30px 15px 30px 15px;
-    font-size: 0.8em;
-    color: #fff;
-    text-align: center;
-    background-color: var(--color-navigation-hover);
+  width: 100%;
+  margin: 0 auto;
+  padding: 30px 15px 30px 15px;
+  font-size: 0.8em;
+  color: #fff;
+  text-align: center;
+  background-color: var(--color-navigation-hover);
+}
+footer a {
+  color: white;
 }
 
 /*# sourceMappingURL=small.css.map */
