--- a/lesson9-weather/css/wireframe.css
+++ b/lesson9-weather/css/wireframe.css
@@ -6,4 +6,38 @@
   padding: 0;
 }
 
+body {
+  background-color: black;
+}
+
+header {
+  padding: 4rem 1rem;
+  text-align: center;
+  background-color: black;
+}
+header h1 {
+  margin: 0;
+  font-family: "Open Sans";
+  color: white;
+}
+
+main {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 20px;
+  row-gap: 20px;
+}
+main picture {
+  grid-column: span 2;
+}
+main picture img {
+  width: 100%;
+}
+
+@media (min-width: 800px) {
+  main {
+    grid-template-columns: repeat(6, 1fr);
+  }
+}
+
 /*# sourceMappingURL=wireframe.css.map */
