--- a/lesson9-weather/scss/wireframe.scss
+++ b/lesson9-weather/scss/wireframe.scss
@@ -5,3 +5,40 @@
     margin: 0;
     padding: 0;
 }
+
+body {
+    background-color: black;
+}
+
+header {
+    padding: 4rem 1rem;
+    text-align: center;
+    background-color: black;
+
+    h1 {
+        margin: 0;
+        font-family: 'Open Sans';
+        color: white;
+    }
+}
+
+main {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 20px;
+    row-gap: 20px;
+
+    picture {
+        grid-column: span 2;
+
+        img {
+            width: 100%;
+        }
+    }
+}
+
+@media (min-width: 800px) {
+    main {
+        grid-template-columns: repeat(6, 1fr);
+    }
+}
