--- a/lesson10/css/medium.css
+++ b/lesson10/css/medium.css
@@ -97,6 +97,10 @@
         grid-row-end: 2;
     }
 
+    .forecast-header {
+        display: block;
+    }
+
     #forecast {
         display: flex;
         flex-direction: row;
