--- a/lesson10/scss/_medium.scss
+++ b/lesson10/scss/_medium.scss
@@ -124,6 +124,10 @@ $container-width: 800px;
         }
     }
 
+    .forecast-header {
+        display: block;
+    }
+
     #forecast {
         display: flex;
         flex-direction: row;
