--- a/lesson10/scss/_medium.scss
+++ b/lesson10/scss/_medium.scss
@@ -98,7 +98,7 @@ $container-width: 800px;
             }
         }
 
-        .town-card:nth-child(odd) {
+        .town-soda-springs {
             flex-direction: row-reverse;
         }
 
