--- a/lesson10/scss/_small.scss
+++ b/lesson10/scss/_small.scss
@@ -513,6 +513,18 @@ form {
 
 }
 
+.town-fish-haven {
+    order: 3;
+}
+
+.town-preston {
+    order: 1;
+}
+
+.town-soda-springs {
+    order: 2;
+}
+
 
 // ---------- FOOTER ----------
 
