--- a/lesson10/css/medium.css
+++ b/lesson10/css/medium.css
@@ -1,182 +1,167 @@
 @media (min-width: 800px) {
-    header {
-        display: block;
-        flex-direction: column;
-        height: 80px;
-    }
+  header {
+    display: block;
+    flex-direction: column;
+    height: 80px;
+  }
+  header #branding {
+    margin: 0 auto;
+    width: 800px;
+  }
+  header #letterhead h1 {
+    font-size: 1.7em;
+  }
+  header #letterhead span {
+    font-size: 0.9em;
+  }
+  header #hamburger {
+    display: none;
+  }
 
-    header #branding {
-        margin: 0 auto;
-        width: 800px;
-    }
+  nav ul {
+    flex-direction: row;
+    max-width: 800px;
+  }
+  nav ul li {
+    display: block;
+  }
+  nav ul li a {
+    font-size: 0.9em;
+  }
 
-    header #letterhead h1 {
-        font-size: 1.7em;
-    }
+  main h2 {
+    text-align: left;
+  }
 
-    header #letterhead span {
-        font-size: 0.9em;
-    }
+  main {
+    width: 800px;
+  }
 
-    header #hamburger {
-        display: none;
-    }
+  main.gallery {
+    grid-template-columns: 1fr 1fr;
+    width: 800px;
+  }
+  main.gallery .image-card {
+    padding: 10px;
+    background-color: white;
+  }
+  main.gallery .image-card img {
+    width: 100%;
+    margin-bottom: 5px;
+  }
+  main.gallery img[data-src] {
+    filter: blur(0.2em);
+  }
+  main.gallery img {
+    filter: blur(0em);
+    transition: filter 0.5s;
+  }
 
-    nav ul {
-        flex-direction: row;
-        max-width: 800px;
-    }
+  .town-cards .town-card {
+    flex-direction: row;
+  }
+  .town-cards .town-card .town-card-information {
+    width: 50%;
+  }
+  .town-cards .town-soda-springs {
+    flex-direction: row-reverse;
+  }
 
-    nav ul li {
-        display: block;
-    }
+  #hero {
+    grid-template-rows: repeat(2, 1fr);
+  }
+  #hero picture {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 3;
+  }
+  #hero #current-temperature {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
 
-    nav ul li a {
-        font-size: 0.9em;
-    }
+  .forecast-header {
+    display: block;
+  }
 
-    main h2 {
-        text-align: left;
-    }
+  #forecast {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 30px;
+    padding-top: 20px;
+  }
 
-    main {
-        width: 800px;
-    }
+  #forecast div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 15%;
+    height: 100px;
+    margin-bottom: 50px;
+  }
 
-    main.gallery {
-        grid-template-columns: 1fr 1fr;
-        width: 800px;
-    }
+  #forecast img {
+    max-height: 90%;
+    max-width: 90%;
+  }
 
-    main.gallery .image-card {
-        padding: 10px;
-        background-color: white;
-    }
+  #forecast div span {
+    display: block;
+    margin-bottom: 10px;
+  }
 
-    main.gallery .image-card img {
-        width: 100%;
-        margin-bottom: 5px;
-    }
+  #article img {
+    max-width: 50%;
+    float: right;
+    margin: 0 0 20px 20px;
+    box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.5);
+  }
 
-    main.gallery img[data-src] {
-        filter: blur(0.2em);
-    }
+  #contact {
+    flex-direction: row-reverse;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin: 0 auto;
+    width: 100%;
+    padding: 30px;
+  }
 
-    main.gallery img {
-        filter: blur(0em);
-        transition: filter 0.5s;
-    }
+  #contact div {
+    width: 40%;
+  }
 
-    .town-cards .town-card {
-        flex-direction: row;
-    }
+  #contact h2 {
+    margin-bottom: 30px;
+  }
 
-    .town-cards .town-card .town-card-information {
-        width: 50%;
-    }
+  #contact img {
+    display: inline;
+    width: 40%;
+  }
 
-    .town-cards .town-card:nth-child(odd) {
-        flex-direction: row-reverse;
-    }
+  form {
+    width: 800px;
+  }
+  form label.top input,
+form label.top select {
+    max-width: 800px;
+  }
 
-    #hero {
-        grid-template-rows: repeat(2, 1fr);
-    }
-
-    #hero picture {
-        grid-column-start: 1;
-        grid-column-end: 5;
-        grid-row-start: 1;
-        grid-row-end: 3;
-    }
-
-    #hero #current-temperature {
-        grid-column-start: 1;
-        grid-column-end: 3;
-        grid-row-start: 1;
-        grid-row-end: 2;
-    }
-
-    .forecast-header {
-        display: block;
-    }
-
-    #forecast {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        width: 100%;
-        margin-bottom: 30px;
-        padding-top: 20px;
-    }
-
-    #forecast div {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        width: 15%;
-        height: 100px;
-        margin-bottom: 50px;
-    }
-
-    #forecast img {
-        max-height: 90%;
-        max-width: 90%;
-    }
-
-    #forecast div span {
-        display: block;
-        margin-bottom: 10px;
-    }
-
-    #article img {
-        max-width: 50%;
-        float: right;
-        margin: 0 0 20px 20px;
-        box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.5);
-    }
-
-    #contact {
-        flex-direction: row-reverse;
-        align-items: flex-start;
-        justify-content: space-between;
-        margin: 0 auto;
-        width: 100%;
-        padding: 30px;
-    }
-
-    #contact div {
-        width: 40%;
-    }
-
-    #contact h2 {
-        margin-bottom: 30px;
-    }
-
-    #contact img {
-        display: inline;
-        width: 40%;
-    }
-
-    form {
-        width: 800px;
-    }
-
-    form label.top input,
-    form label.top select {
-        max-width: 800px;
-    }
-
-    footer {
-        width: 800px;
-        margin: 0 auto;
-        padding: 30px 15px 30px 15px;
-        font-size: 0.8em;
-        color: #fff;
-        text-align: center;
-        background-color: var(--color-navigation-hover);
-    }
+  footer {
+    width: 800px;
+    margin: 0 auto;
+    padding: 30px 15px 30px 15px;
+    font-size: 0.8em;
+    color: #fff;
+    text-align: center;
+    background-color: var(--color-navigation-hover);
+  }
 }
 
 /*# sourceMappingURL=medium.css.map */
