--- a/lesson10/css/small.css
+++ b/lesson10/css/small.css
@@ -54,14 +54,12 @@ header {
   border-top: 1px solid var(--color-navigation-background);
   border-bottom: 1px solid var(--color-navigation-background);
 }
-
 header #branding {
   display: flex;
   flex-direction: row;
   align-items: center;
   height: 100%;
 }
-
 header #logo {
   display: flex;
   flex-direction: column;
@@ -70,34 +68,28 @@ header #logo {
   height: 100%;
   margin-right: 15px;
 }
-
 header #logo img {
   height: 80%;
 }
-
 header #letterhead {
   display: flex;
   flex-direction: column;
   align-content: center;
   justify-content: center;
 }
-
 header #letterhead h1 {
   font-size: 1.4em;
   font-weight: bold;
 }
-
 header #letterhead span {
   font-size: 0.8em;
   font-style: italic;
 }
-
 header #hamburger {
   align-content: flex-end;
   font-size: 1.7em;
   cursor: pointer;
 }
-
 header .responsive {
   transform: rotate(90deg);
 }
@@ -110,7 +102,6 @@ nav {
   background-color: var(--color-navigation-background);
   user-select: none;
 }
-
 nav ul {
   display: flex;
   flex-direction: column;
@@ -121,13 +112,11 @@ nav ul {
   padding: 0;
   text-align: center;
 }
-
 nav ul li {
   display: none;
   padding: 0;
   width: 100%;
 }
-
 nav a,
 nav a:visited {
   display: block;
@@ -137,16 +126,13 @@ nav a:visited {
   color: #fff;
   text-decoration: none;
 }
-
 nav a:hover {
   color: var(--color-navigation-link);
   background-color: var(--color-navigation-hover);
 }
-
 nav a.active {
   background-color: #052A51;
 }
-
 nav ul.responsive li {
   display: block;
   width: 100%;
@@ -160,17 +146,14 @@ main {
   margin: 0 auto;
   padding-top: 15px;
 }
-
 main h2 {
   margin-bottom: 1rem;
   font-size: 2em;
   text-align: center;
 }
-
 main picture {
   width: 100%;
 }
-
 main picture img {
   width: 100%;
 }
@@ -182,21 +165,17 @@ main.gallery {
   row-gap: 20px;
   margin-bottom: 50px;
 }
-
 main.gallery .image-card {
   padding: 10px;
   background-color: white;
 }
-
 main.gallery .image-card img {
   width: 100%;
   margin-bottom: 5px;
 }
-
 main.gallery img[data-src] {
   filter: blur(0.2em);
 }
-
 main.gallery img {
   filter: blur(0em);
   transition: filter 0.5s;
@@ -206,7 +185,6 @@ main.thankyou h1 {
   font-size: 5em;
   margin-bottom: 1rem;
 }
-
 main.thankyou p {
   text-align: center;
 }
@@ -220,7 +198,6 @@ main.thankyou p {
   width: 100%;
   margin: 15px 0;
 }
-
 .town-cards .town-card {
   grid-column: span 2;
   display: flex;
@@ -230,29 +207,24 @@ main.thankyou p {
   padding: 10px;
   background-color: #083d77;
 }
-
 .town-cards .town-card .town-card-information {
   width: 100%;
   margin-bottom: 20px;
   text-align: center;
 }
-
 .town-cards .town-card .town-card-information h3 {
   font-size: 2.5em;
   line-height: 1.5em;
   text-align: center;
 }
-
 .town-cards .town-card .town-card-information span {
   display: block;
   line-height: 1.7em;
 }
-
 .town-cards .town-card .town-card-information span.town-motto {
   margin-bottom: 30px;
   font-style: italic;
 }
-
 .town-cards .town-card .town-card-image img {
   width: 100%;
 }
@@ -264,7 +236,6 @@ main.thankyou p {
   row-gap: 15px;
   margin-bottom: 30px;
 }
-
 #hero picture {
   grid-column-start: 1;
   grid-column-end: 5;
@@ -272,11 +243,9 @@ main.thankyou p {
   grid-row-end: 4;
   z-index: 0;
 }
-
 #hero picture img {
   width: 100%;
 }
-
 #hero #current-temperature {
   grid-column-start: 1;
   grid-column-end: 5;
@@ -376,7 +345,6 @@ form {
   width: 100%;
   text-align: left;
 }
-
 form fieldset {
   display: flex;
   flex-direction: column;
@@ -386,19 +354,16 @@ form fieldset {
   border: 1px solid var(--color-blue);
   border-radius: 5px;
 }
-
 form fieldset legend {
   color: var(--color-blue);
   margin: 0 1rem;
   padding: 0 0.5rem;
 }
-
 form input,
 form select,
 form span {
   margin-bottom: 10px;
 }
-
 form label.top input,
 form label.top select {
   -webkit-appearance: none;
@@ -410,7 +375,6 @@ form label.top select {
   border-radius: 4px;
   color: #555;
 }
-
 form label.top,
 form div,
 form textarea {
@@ -419,13 +383,11 @@ form textarea {
   color: red;
   font-size: 0.8rem;
 }
-
 form label.sbs {
   display: block;
   padding: 0.75rem;
   color: #555;
 }
-
 form input.submit-button {
   width: 100%;
   margin: 0 0 2rem 0;
@@ -435,19 +397,15 @@ form input.submit-button {
   color: white;
   border-radius: 0.5rem;
 }
-
 form input.submit-button:hover {
   cursor: pointer;
 }
-
 form label.top input:required {
   border-left: red solid 6px;
 }
-
 form label.top input:required:valid {
   border-left: green solid 6px;
 }
-
 form textarea {
   font-family: monospace;
   font-size: 1.5em;
@@ -458,9 +416,20 @@ form textarea {
   width: 100%;
   height: 15rem;
 }
-
 form #currentRating {
   font-size: 2em;
+}
+
+.town-fish-haven {
+  order: 3;
+}
+
+.town-preston {
+  order: 1;
+}
+
+.town-soda-springs {
+  order: 2;
 }
 
 footer {
@@ -472,7 +441,6 @@ footer {
   text-align: center;
   background-color: var(--color-navigation-hover);
 }
-
 footer a {
   color: white;
 }
