--- a/lesson11/css/small.css
+++ b/lesson11/css/small.css
@@ -43,6 +43,11 @@ h2 {
   margin-bottom: 10px;
 }
 
+strong {
+  font-family: "Open Sans", sans-serif;
+  font-weight: bold;
+}
+
 header {
   display: flex;
   flex-direction: row;
@@ -144,10 +149,9 @@ main {
   align-items: center;
   justify-content: center;
   margin: 0 auto;
-  padding-top: 15px;
 }
 main h2 {
-  margin-bottom: 1rem;
+  margin: 3rem 0 3rem 0;
   font-size: 2em;
   text-align: center;
 }
@@ -292,9 +296,24 @@ main.thankyou p {
   border-radius: 5px;
   margin-bottom: 30px;
 }
+#article a,
+#article a:visited {
+  font-weight: bold;
+  color: rgba(0, 50, 0, 0.9);
+}
+#article a:hover {
+  color: green;
+}
+#article ul {
+  padding-left: 15px;
+}
+#article li {
+  line-height: 1.7rem;
+}
 
 #article h2 {
   margin-bottom: 1em;
+  text-transform: capitalize;
 }
 
 #article img {
@@ -305,6 +324,17 @@ main.thankyou p {
 #article p {
   margin-bottom: 1.7em;
   line-height: 1.7em;
+}
+
+#events {
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+.event-card {
+  margin: 10px 0 10px 0;
+  padding: 10px;
+  background-color: white;
 }
 
 #contact {
