--- a/lesson11/scss/_small.scss
+++ b/lesson11/scss/_small.scss
@@ -499,7 +499,7 @@ form {
     textarea {
         display: block;
         padding-top: 0.5rem;
-        color: red;
+        color: rgb(158, 0, 0);
         font-size: 0.8rem;
     }
 
