--- a/lesson11/scss/_medium.scss
+++ b/lesson11/scss/_medium.scss
@@ -150,6 +150,9 @@ $container-width: 800px;
     #forecast img {
         max-height: 90%;
         max-width: 90%;
+        margin-bottom: 10px;
+        background-color: #F4D35E;
+        border-radius: 5px;
     }
 
     #forecast div span {
