--- a/lesson11/css/small.css
+++ b/lesson11/css/small.css
@@ -156,6 +156,7 @@ main h2 {
   text-align: center;
 }
 main picture {
+  margin-top: 2rem;
   width: 100%;
 }
 main picture img {
@@ -167,6 +168,7 @@ main.gallery {
   grid-template-columns: 1fr;
   column-gap: 20px;
   row-gap: 20px;
+  margin-top: 2rem;
   margin-bottom: 50px;
 }
 main.gallery .image-card {
