--- a/lesson11/scss/_small.scss
+++ b/lesson11/scss/_small.scss
@@ -183,6 +183,7 @@ main {
     }
 
     picture {
+        margin-top: 2rem;
         width: 100%;
 
         img {
@@ -197,6 +198,7 @@ main.gallery {
     grid-template-columns: 1fr;
     column-gap: 20px;
     row-gap: 20px;
+    margin-top: 2rem;
     margin-bottom: 50px;
 
     .image-card {
