--- a/W14/sass/styles.scss
+++ b/W14/sass/styles.scss
@@ -1,7 +1,15 @@
+@use 'reset';
+@use 'colors';
+@use 'typography';
+
+// VARIABLES
+$header-height: 50px;
+$main-top-padding: $header-height+10px;
+
+
+// LAYOUT
 body {
-    font-family: 'Rubik', sans-serif;
-    background-color: #111;
-    color: #FBFBF2;
+  font-family: typography.$body;
 }
 
 h1,
@@ -10,41 +18,178 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Inter', sans-serif;
-}
-
-h1 {
-    font-size: 5em;
-    font-weight: 900;
-    color: #D81159;
-}
-
-.wrapper {
-    width: 100%;
-}
-
-.hero {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 40vh;
-    min-height: 300px;
-    background-color: #111;
-    overflow: hidden;
-
-    picture,
-    img {
-        max-width: 100%;
-        height: auto;
-        // opacity: 0.5;
-    }
-
-
+  font-family: typography.$headings;
 }
 
 .container {
-    margin: 0 auto;
-    padding: 20px;
-    max-width: 90%
+  margin: auto;
+  padding: 0 10px;
+}
+
+.header {
+  height: $header-height;
+  display: flex;
+  align-items: center;
+  color: colors.$header-text;
+  background-color: colors.$header-background;
+
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
+  &__wrapper {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &__title {
+    display: none;
+    font-size: 1.7em;
+    font-weight: 900;
+    vertical-align: middle;
+  }
+
+  &__logo {
+    height: $header-height - 20px;
+    align-self: center;
+  }
+
+  &__hamburger {
+    // color: colors.$secondary;
+    font-size: 2em;
+    cursor: pointer;
+
+    &--active {
+      transform: rotate(90deg);
+    }
+  }
+}
+
+.nav {
+  position: absolute;
+  top: $header-height;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: colors.$navigation-background;
+
+  &--hidden {
+    display: none;
+  }
+
+  &__list {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: stretch;
+  }
+
+  &__item {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__link {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Inter';
+    font-size: 2.2em;
+    text-transform: uppercase;
+    text-align: center;
+    text-decoration: none;
+    letter-spacing: .07em;
+    color: colors.$navigation-text;
+    background-color: colors.$navigation-background;
+
+    &:hover {
+      color: colors.$nav-hover-text;
+      background-color: colors.$nav-hover-background;
+    }
+
+    &--active {
+      color: colors.$nav-active-text;
+      background-color: colors.$nav-active-background;
+    }
+  }
+
+
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 300px;
+  padding-bottom: $header-height;
+  background-color: colors.$hero-background;
+
+  &__title {
+    padding: 0;
+    margin: 0;
+    line-height: 1em;
+    font-family: 'Inter';
+    font-size: 7em;
+    font-weight: 700;
+    line-height: 8rem;
+    letter-spacing: -0.05em;
+    color: colors.$hero-title;
+  }
+
+  &__subtitle {
+    font-family: 'Inter';
+    font-weight: 300;
+    font-size: 2.1em;
+    line-height: 2rem;
+    letter-spacing: -.05em;
+    color: colors.$hero-subtitle-text;
+    margin-bottom: 50px;
+    text-align: center;
+  }
+
+  &__button {
+    padding: 10px 50px;
+    font-family: 'Rubik';
+    font-weight: 400;
+    font-size: 1em;
+    color: colors.$hero-button-text;
+    text-decoration: none;
+    background-color: colors.$hero-button-background;
+    border-bottom: 5px solid colors.$hero-button-border;
+    border-top: none;
+    border-left: none;
+    border-radius: 5px;
+
+    &:hover {
+      color: colors.$hero-button-text-hover;
+      border-bottom: 5px solid colors.$hero-button-border-hover;
+      background-color: colors.$hero-button-background-hover;
+    }
+
+  }
+}
+
+.main {
+  padding-top: $main-top-padding;
+
+  .main__section {
+    height: 100vh;
+    // background-color: colors.$secondary;
+  }
+
+  .main__section:nth-child(even) {
+    // background-color: colors.$accent;
+  }
 }
