--- a/W14/css/styles.css
+++ b/W14/css/styles.css
@@ -135,6 +135,7 @@ table {
 
 body {
   font-family: "Rubik";
+  background-color: #203746;
 }
 
 h1,
@@ -286,11 +287,59 @@ h6 {
   background-color: #fcc01d;
 }
 
-.main {
-  padding-top: 60px;
+.current_weather {
+  display: grid;
+  grid-template-columns: repeat(2, 50%);
 }
-.main .main__section {
-  height: 100vh;
+.current_weather__banner {
+  grid-column: 1/3;
+  grid-row: 1;
+  width: 100%;
+}
+.current_weather__image {
+  grid-column: 1/3;
+  grid-row: 1;
+  width: 100%;
+}
+.current_weather__title {
+  padding: 5px 0;
+  font-family: "Inter";
+  font-size: 2em;
+  font-weight: 300;
+  text-align: left;
+  color: #203746;
+  letter-spacing: -0.05em;
+}
+.current_weather__temperature_table {
+  grid-column: 2/3;
+  grid-row: 1;
+  padding-top: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  background-color: rgba(253, 213, 104, 0.3);
+}
+.current_weather__temperature_table td {
+  font-size: 1.2em;
+  font-weight: 300;
+  padding: 3px 5px;
+  margin-bottom: 10px;
+  text-align: left;
+  color: #203746;
+}
+
+.main {
+  background-color: white;
+}
+.main__hero_image {
+  height: 300px;
+}
+.main__image {
+  width: 100%;
+}
+.main__forecast {
+  background-color: yellow;
 }
 
 /*# sourceMappingURL=styles.css.map */
