--- a/W14/sass/styles.scss
+++ b/W14/sass/styles.scss
@@ -9,7 +9,9 @@ $main-top-padding: $header-height+10px;
 
 // LAYOUT
 body {
+  // height: 100vh;
   font-family: typography.$body;
+  background-color: colors.$body-background;
 }
 
 h1,
@@ -181,15 +183,75 @@ h6 {
   }
 }
 
+.current_weather {
+  display: grid;
+  grid-template-columns: repeat(2, 50%);
+
+  &__banner {
+    grid-column: 1/3;
+    grid-row: 1;
+    width: 100%;
+  }
+
+  &__image {
+    grid-column: 1/3;
+    grid-row: 1;
+    width: 100%;
+  }
+
+  &__title {
+    padding: 5px 0;
+    font-family: 'Inter';
+    font-size: 2em;
+    font-weight: 300;
+    text-align: left;
+    color: colors.$current-weather-section-title;
+    letter-spacing: -0.05em;
+  }
+
+  &__temperature_table {
+    grid-column: 2/3;
+    grid-row: 1;
+    padding-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    background-color: rgba($color: colors.$current-weather-section-background, $alpha: .3);
+
+    td {
+      font-size: 1.2em;
+      font-weight: 300;
+      padding: 3px 5px;
+      margin-bottom: 10px;
+      text-align: left;
+      color: colors.$current-weather-section-text;
+    }
+
+  }
+}
+
 .main {
-  padding-top: $main-top-padding;
+  background-color: white;
 
-  .main__section {
-    height: 100vh;
-    // background-color: colors.$secondary;
+  &__hero_image {
+    height: 300px;
   }
 
-  .main__section:nth-child(even) {
-    // background-color: colors.$accent;
+  &__image {
+    width: 100%;
   }
+
+  &__section {
+    // height: 100vh;
+    // background-color: orange;
+  }
+
+  &__forecast {
+    background-color: yellow;
+  }
+
+  // .main__section:nth-child(even) {
+  //   // background-color: colors.$accent;
+  // }
 }
