--- a/W14/css/styles.css
+++ b/W14/css/styles.css
@@ -243,19 +243,17 @@ h6 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 300px;
-  padding-bottom: 50px;
+  padding: 50px;
   background-color: #203746;
 }
 .hero__title {
   padding: 0;
-  margin: 0;
   line-height: 1em;
   font-family: "Inter";
-  font-size: 7em;
+  font-size: 5em;
   font-weight: 700;
-  line-height: 8rem;
   letter-spacing: -0.05em;
+  text-align: center;
   color: #8cb365;
 }
 .hero__subtitle {
@@ -263,10 +261,17 @@ h6 {
   font-weight: 300;
   font-size: 2.1em;
   line-height: 2rem;
-  letter-spacing: -0.05em;
   color: white;
   margin-bottom: 50px;
   text-align: center;
+}
+.hero__description {
+  max-width: 700px;
+  font-weight: 300;
+  margin-bottom: 50px;
+  color: white;
+  text-align: center;
+  line-height: 1.7em;
 }
 .hero__button {
   padding: 10px 50px;
@@ -287,59 +292,70 @@ h6 {
   background-color: #fcc01d;
 }
 
-.current_weather {
+.weather {
   display: grid;
   grid-template-columns: repeat(2, 50%);
+  grid-template-rows: 2;
 }
-.current_weather__banner {
+.weather__banner {
   grid-column: 1/3;
-  grid-row: 1;
+  grid-row: 1/3;
   width: 100%;
 }
-.current_weather__image {
+.weather__image {
   grid-column: 1/3;
-  grid-row: 1;
+  grid-row: 1/3;
   width: 100%;
 }
-.current_weather__title {
-  padding: 5px 0;
+.weather .temperature {
+  grid-column: 2/3;
+  grid-row: 1/2;
+  padding-top: 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(253, 213, 104, 0.6);
+}
+.weather .temperature__title, .weather .forecast__title {
+  margin-bottom: 10px;
   font-family: "Inter";
-  font-size: 2em;
+  font-size: 1.7em;
   font-weight: 300;
   text-align: left;
   color: #203746;
   letter-spacing: -0.05em;
 }
-.current_weather__temperature_table {
-  grid-column: 2/3;
-  grid-row: 1;
-  padding-top: 50px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  background-color: rgba(253, 213, 104, 0.3);
-}
-.current_weather__temperature_table td {
-  font-size: 1.2em;
+.weather .temperature td {
+  font-size: 0.9em;
   font-weight: 300;
   padding: 3px 5px;
   margin-bottom: 10px;
   text-align: left;
   color: #203746;
 }
-
-.main {
-  background-color: white;
+.weather .temperature tr > td:first-child {
+  text-align: right;
 }
-.main__hero_image {
-  height: 300px;
+.weather .forecast {
+  grid-column: 2/3;
+  grid-row: 2/3;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0 10px;
+  background-color: rgba(253, 213, 104, 0.6);
 }
-.main__image {
+.weather .forecast__wrapper {
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
 }
-.main__forecast {
-  background-color: yellow;
+.weather .forecast__box {
+  border: 1px solid red;
 }
 
 /*# sourceMappingURL=styles.css.map */
