--- a/W14/sass/styles.scss
+++ b/W14/sass/styles.scss
@@ -134,19 +134,19 @@ h6 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 300px;
-  padding-bottom: $header-height;
+  // height: 300px;
+  padding: $header-height;
   background-color: colors.$hero-background;
 
   &__title {
     padding: 0;
-    margin: 0;
     line-height: 1em;
     font-family: 'Inter';
-    font-size: 7em;
+    font-size: 5em;
     font-weight: 700;
-    line-height: 8rem;
+    // line-height: 4rem;
     letter-spacing: -0.05em;
+    text-align: center;
     color: colors.$hero-title;
   }
 
@@ -155,10 +155,19 @@ h6 {
     font-weight: 300;
     font-size: 2.1em;
     line-height: 2rem;
-    letter-spacing: -.05em;
+    // letter-spacing: -.05em;
     color: colors.$hero-subtitle-text;
     margin-bottom: 50px;
     text-align: center;
+  }
+
+  &__description {
+    max-width: 700px;
+    font-weight: 300;
+    margin-bottom: 50px;
+    color: white;
+    text-align: center;
+    line-height: 1.7em;
   }
 
   &__button {
@@ -183,44 +192,45 @@ h6 {
   }
 }
 
-.current_weather {
+.weather {
   display: grid;
   grid-template-columns: repeat(2, 50%);
+  grid-template-rows: 2;
 
   &__banner {
     grid-column: 1/3;
-    grid-row: 1;
+    grid-row: 1/3;
     width: 100%;
   }
 
   &__image {
     grid-column: 1/3;
-    grid-row: 1;
+    grid-row: 1/3;
     width: 100%;
   }
 
-  &__title {
-    padding: 5px 0;
-    font-family: 'Inter';
-    font-size: 2em;
-    font-weight: 300;
-    text-align: left;
-    color: colors.$current-weather-section-title;
-    letter-spacing: -0.05em;
-  }
-
-  &__temperature_table {
+  .temperature {
     grid-column: 2/3;
-    grid-row: 1;
-    padding-top: 50px;
+    grid-row: 1/2;
+    padding-top: 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
-    background-color: rgba($color: colors.$current-weather-section-background, $alpha: .3);
+    justify-content: center;
+    background-color: rgba($color: colors.$current-weather-section-background, $alpha: .6);
+
+    &__title {
+      margin-bottom: 10px;
+      font-family: 'Inter';
+      font-size: 1.7em;
+      font-weight: 300;
+      text-align: left;
+      color: colors.$current-weather-section-title;
+      letter-spacing: -0.05em;
+    }
 
     td {
-      font-size: 1.2em;
+      font-size: .9em;
       font-weight: 300;
       padding: 3px 5px;
       margin-bottom: 10px;
@@ -228,30 +238,38 @@ h6 {
       color: colors.$current-weather-section-text;
     }
 
+    tr>td:first-child {
+      text-align: right;
+    }
+
+  }
+
+  .forecast {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0 10px;
+    background-color: rgba($color: colors.$current-weather-section-background, $alpha: .6);
+
+    &__title {
+      @extend .temperature__title;
+    }
+
+    &__wrapper {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-evenly;
+    }
+
+    &__box {
+      border: 1px solid red;
+    }
   }
 }
 
-.main {
-  background-color: white;
-
-  &__hero_image {
-    height: 300px;
-  }
-
-  &__image {
-    width: 100%;
-  }
-
-  &__section {
-    // height: 100vh;
-    // background-color: orange;
-  }
-
-  &__forecast {
-    background-color: yellow;
-  }
-
-  // .main__section:nth-child(even) {
-  //   // background-color: colors.$accent;
-  // }
-}
+.main {}
