--- a/W14/css/styles.css
+++ b/W14/css/styles.css
@@ -147,13 +147,9 @@ h6 {
   font-family: "Inter";
 }
 
-.container {
-  margin: auto;
-  padding: 0 10px;
-}
-
 .header {
   height: 50px;
+  padding: 0px 5px;
   display: flex;
   align-items: center;
   color: white;
@@ -239,11 +235,13 @@ h6 {
 }
 
 .hero {
+  height: 90vh;
+  margin-top: -80px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 50px;
+  padding: 0 50px;
   background-color: #203746;
 }
 .hero__title {
@@ -292,70 +290,105 @@ h6 {
   background-color: #fcc01d;
 }
 
-.weather {
-  display: grid;
-  grid-template-columns: repeat(2, 50%);
-  grid-template-rows: 2;
-}
-.weather__banner {
-  grid-column: 1/3;
-  grid-row: 1/3;
-  width: 100%;
-}
-.weather__image {
-  grid-column: 1/3;
-  grid-row: 1/3;
-  width: 100%;
-}
-.weather .temperature {
-  grid-column: 2/3;
-  grid-row: 1/2;
-  padding-top: 0px;
+.main .section {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: rgba(253, 213, 104, 0.6);
+  min-height: 100vh;
+  background-position: center;
+  background-size: cover;
 }
-.weather .temperature__title, .weather .forecast__title {
-  margin-bottom: 10px;
-  font-family: "Inter";
-  font-size: 1.7em;
+.main .section__rental--scooter {
+  background-image: url("../images/scooters_500.jpg");
+}
+.main .section__rental--jeep {
+  background-image: url("../images/jeep_500.jpg");
+}
+.main .section__rental--atv {
+  background-image: url("../images/atv_500.jpg");
+}
+.main .section__weather--temperature {
+  background-image: url("../images/banner_500.jpg");
+}
+.main .section__weather--forecast {
+  background-image: url("../images/ships_500.jpg");
+}
+.main .section__summary {
+  font-size: 1em;
   font-weight: 300;
-  text-align: left;
-  color: #203746;
-  letter-spacing: -0.05em;
+  line-height: 1.5em;
+  text-align: center;
+  color: white;
 }
-.weather .temperature td {
-  font-size: 0.9em;
+.main .section .wrapper {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+.main .section .wrapper--scooter {
+  background-color: rgba(152, 61, 1, 0.8);
+}
+.main .section .wrapper--jeep {
+  background-color: rgba(48, 83, 105, 0.8);
+}
+.main .section .wrapper--atv {
+  background-color: rgba(77, 103, 50, 0.8);
+}
+.main .section .wrapper--weather {
+  background-color: rgba(253, 213, 104, 0.7);
+}
+.main .section .wrapper--forecast {
+  background-color: rgba(59, 94, 84, 0.9);
+}
+.main .section .wrapper .container {
+  max-width: 700px;
+  height: 100%;
+  margin: 0 auto;
+  padding: 0 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.main .section .wrapper .container h3 {
+  margin-bottom: 30px;
+  font-size: 2.7em;
+  font-weight: 700;
+  text-align: center;
+  color: white;
+}
+.main .section td {
+  font-size: 1.6em;
   font-weight: 300;
   padding: 3px 5px;
   margin-bottom: 10px;
   text-align: left;
   color: #203746;
 }
-.weather .temperature tr > td:first-child {
+.main .section tr > td:first-child {
   text-align: right;
 }
-.weather .forecast {
-  grid-column: 2/3;
-  grid-row: 2/3;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 0 10px;
-  background-color: rgba(253, 213, 104, 0.6);
-}
-.weather .forecast__wrapper {
-  width: 100%;
+
+#forecastWrapper {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
+  width: 100%;
 }
-.weather .forecast__box {
-  border: 1px solid red;
+#forecastWrapper .forecast__box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  font-size: 1.5em;
+}
+#forecastWrapper .forecast__box img {
+  margin: 15px 0;
+  background-color: #73a2bf;
+  border-radius: 100%;
 }
 
 /*# sourceMappingURL=styles.css.map */
