--- a/W14/sass/styles.scss
+++ b/W14/sass/styles.scss
@@ -23,13 +23,11 @@ h6 {
   font-family: typography.$headings;
 }
 
-.container {
-  margin: auto;
-  padding: 0 10px;
-}
+
 
 .header {
   height: $header-height;
+  padding: 0px 5px;
   display: flex;
   align-items: center;
   color: colors.$header-text;
@@ -130,12 +128,13 @@ h6 {
 }
 
 .hero {
+  height: 90vh;
+  margin-top: -80px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  // height: 300px;
-  padding: $header-height;
+  padding: 0 50px;
   background-color: colors.$hero-background;
 
   &__title {
@@ -144,7 +143,6 @@ h6 {
     font-family: 'Inter';
     font-size: 5em;
     font-weight: 700;
-    // line-height: 4rem;
     letter-spacing: -0.05em;
     text-align: center;
     color: colors.$hero-title;
@@ -192,84 +190,137 @@ h6 {
   }
 }
 
-.weather {
-  display: grid;
-  grid-template-columns: repeat(2, 50%);
-  grid-template-rows: 2;
-
-  &__banner {
-    grid-column: 1/3;
-    grid-row: 1/3;
-    width: 100%;
-  }
-
-  &__image {
-    grid-column: 1/3;
-    grid-row: 1/3;
-    width: 100%;
-  }
-
-  .temperature {
-    grid-column: 2/3;
-    grid-row: 1/2;
-    padding-top: 0px;
+.main {
+  .section {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: rgba($color: colors.$current-weather-section-background, $alpha: .6);
+    min-height: 100vh;
+    background-position: center;
+    background-size: cover;
 
-    &__title {
-      margin-bottom: 10px;
-      font-family: 'Inter';
-      font-size: 1.7em;
-      font-weight: 300;
-      text-align: left;
-      color: colors.$current-weather-section-title;
-      letter-spacing: -0.05em;
+    &__rental {
+      &--scooter {
+        background-image: url('../images/scooters_500.jpg');
+      }
+
+      &--jeep {
+        background-image: url('../images/jeep_500.jpg');
+      }
+
+      &--atv {
+        background-image: url('../images/atv_500.jpg');
+      }
+
     }
 
+    &__weather {
+
+      &--temperature {
+        background-image: url('../images/banner_500.jpg');
+      }
+
+      &--forecast {
+        background-image: url('../images/ships_500.jpg');
+      }
+    }
+
+    &__summary {
+      font-size: 1em;
+      font-weight: 300;
+      line-height: 1.5em;
+      text-align: center;
+      color: white;
+    }
+
+    .wrapper {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+
+
+      &--scooter {
+        background-color: rgba($color: colors.$rental-background-scooter, $alpha: .8);
+      }
+
+      &--jeep {
+        background-color: rgba($color: colors.$rental-background-jeep, $alpha: .8);
+      }
+
+      &--atv {
+        background-color: rgba($color: colors.$rental-background-atv, $alpha: .8);
+      }
+
+      &--weather {
+        background-color: rgba($color: colors.$weather-temperature-background, $alpha: .7);
+      }
+
+      &--forecast {
+        background-color: rgba($color: colors.$weather-forecast-background, $alpha: .9);
+      }
+
+
+      .container {
+        max-width: 700px;
+        height: 100%;
+        margin: 0 auto;
+        padding: 0 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        h3 {
+          margin-bottom: 30px;
+          font-size: 2.7em;
+          font-weight: 700;
+          text-align: center;
+          color: colors.$weather-section-title;
+        }
+
+      }
+
+    }
+
+
     td {
-      font-size: .9em;
+      font-size: 1.6em;
       font-weight: 300;
       padding: 3px 5px;
       margin-bottom: 10px;
       text-align: left;
-      color: colors.$current-weather-section-text;
+      color: colors.$weather-section-text;
     }
 
     tr>td:first-child {
       text-align: right;
     }
 
-  }
 
-  .forecast {
-    grid-column: 2/3;
-    grid-row: 2/3;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 0 10px;
-    background-color: rgba($color: colors.$current-weather-section-background, $alpha: .6);
 
-    &__title {
-      @extend .temperature__title;
-    }
-
-    &__wrapper {
-      width: 100%;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: space-evenly;
-    }
-
-    &__box {
-      border: 1px solid red;
-    }
   }
 }
 
-.main {}
+#forecastWrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+
+  .forecast__box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+    font-size: 1.5em;
+
+    img {
+      margin: 15px 0;
+      background-color: colors.$weather-section-forecast-icon-background;
+      border-radius: 100%;
+    }
+  }
+}
