--- a/W14/css/styles.css
+++ b/W14/css/styles.css
@@ -153,7 +153,7 @@ h6 {
   display: flex;
   align-items: center;
   color: white;
-  background-color: #203746;
+  background-color: #305369;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -192,9 +192,17 @@ h6 {
   right: 0;
   bottom: 0;
   background-color: #305369;
+  z-index: 10;
 }
 .nav--hidden {
   display: none;
+}
+.nav__wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 .nav__list {
   height: 100%;
@@ -235,8 +243,7 @@ h6 {
 }
 
 .hero {
-  height: 90vh;
-  margin-top: -80px;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -310,6 +317,7 @@ h6 {
   background-image: url("../images/atv_500.jpg");
 }
 .main .section__weather--temperature {
+  background-position: bottom;
   background-image: url("../images/banner_500.jpg");
 }
 .main .section__weather--forecast {
@@ -352,6 +360,9 @@ h6 {
   align-items: center;
   justify-content: center;
 }
+.main .section .wrapper .container picture {
+  display: none;
+}
 .main .section .wrapper .container h3 {
   margin-bottom: 30px;
   font-size: 2.7em;
@@ -389,6 +400,168 @@ h6 {
   margin: 15px 0;
   background-color: #73a2bf;
   border-radius: 100%;
+}
+
+.footer {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  color: white;
+}
+.footer h3 {
+  margin-bottom: 20px;
+  font-size: 2em;
+  font-weight: 700;
+  text-align: center;
+  color: white;
+}
+.footer__list {
+  margin-bottom: 40px;
+}
+.footer__item {
+  width: 100%;
+  text-align: center;
+}
+.footer__link {
+  font-size: 1em;
+  line-height: 2em;
+  text-decoration: none;
+  color: #fe6601;
+}
+.footer__link:hover {
+  color: #fcc01d;
+}
+
+@media (min-width: 800px) {
+  .header__wrapper {
+    max-width: 800px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .header__title {
+    order: 2;
+    display: block;
+    margin-left: 10px;
+  }
+  .header__hamburger {
+    display: none;
+  }
+
+  .nav {
+    position: relative;
+    top: 0;
+  }
+  .nav--hidden {
+    display: block;
+  }
+  .nav__wrapper {
+    position: relative;
+    max-width: 800px;
+    margin: 0 auto;
+  }
+  .nav__list {
+    height: 50px;
+    padding: 15px 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .nav__item {
+    padding: 15px 0;
+  }
+  .nav__link {
+    font-size: 1em;
+    border-radius: 50px;
+  }
+
+  .hero {
+    height: 50vh;
+  }
+
+  .main .section {
+    min-height: 500px;
+  }
+  .main .section .wrapper--scooter .container,
+.main .section .wrapper--jeep .container,
+.main .section .wrapper--atv .container {
+    position: relative;
+    max-width: 750px;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: space-evenly;
+  }
+  .main .section .wrapper--scooter .container picture,
+.main .section .wrapper--jeep .container picture,
+.main .section .wrapper--atv .container picture {
+    display: block;
+    order: -1;
+    width: 60%;
+    overflow: hidden;
+    text-align: center;
+  }
+  .main .section .wrapper--scooter .container article,
+.main .section .wrapper--jeep .container article,
+.main .section .wrapper--atv .container article {
+    width: 50%;
+    padding-left: 20px;
+  }
+  .main .section .wrapper--scooter .container h3,
+.main .section .wrapper--jeep .container h3,
+.main .section .wrapper--atv .container h3 {
+    text-align: left;
+  }
+  .main .section .wrapper--atv .container {
+    flex-direction: row-reverse;
+  }
+  .main .section .wrapper--atv article {
+    padding-right: 20px;
+    padding-left: 0px;
+  }
+  .main .section .wrapper--atv article h3 {
+    text-align: right !important;
+  }
+  .main .section .wrapper--atv .section__summary {
+    text-align: right;
+  }
+  .main .section__summary {
+    text-align: left;
+  }
+  .main .section__rental--scooter {
+    background-image: none;
+  }
+  .main .section__rental--jeep {
+    background-image: none;
+  }
+  .main .section__rental--atv {
+    background-image: none;
+  }
+  .main .section__rental img {
+    width: 100%;
+    height: 100%;
+  }
+  .main .section__weather--temperature {
+    background-image: none;
+  }
+  .main .section__weather--forecast {
+    background-image: none;
+  }
+
+  .footer {
+    max-width: 750px;
+    height: auto;
+    margin: 0 auto;
+    padding: 100px 0;
+    flex-direction: row;
+    align-items: flex-start;
+    align-content: flex-start;
+    justify-content: space-between;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
