--- a/W14/sass/styles.scss
+++ b/W14/sass/styles.scss
@@ -9,7 +9,6 @@ $main-top-padding: $header-height+10px;
 
 // LAYOUT
 body {
-  // height: 100vh;
   font-family: typography.$body;
   background-color: colors.$body-background;
 }
@@ -77,9 +76,20 @@ h6 {
   right: 0;
   bottom: 0;
   background-color: colors.$navigation-background;
+  z-index: 10;
 
   &--hidden {
     display: none;
+  }
+
+  &__wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    // width: 100%;
+    // height: 100%;
   }
 
   &__list {
@@ -128,8 +138,8 @@ h6 {
 }
 
 .hero {
-  height: 90vh;
-  margin-top: -80px;
+  height: 100vh;
+  // margin-top: -80px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -219,6 +229,7 @@ h6 {
     &__weather {
 
       &--temperature {
+        background-position: bottom;
         background-image: url('../images/banner_500.jpg');
       }
 
@@ -272,6 +283,10 @@ h6 {
         align-items: center;
         justify-content: center;
 
+        picture {
+          display: none;
+        }
+
         h3 {
           margin-bottom: 30px;
           font-size: 2.7em;
@@ -324,3 +339,42 @@ h6 {
     }
   }
 }
+
+.footer {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  color: white;
+
+  h3 {
+    margin-bottom: 20px;
+    font-size: 2em;
+    font-weight: 700;
+    text-align: center;
+    color: colors.$weather-section-title;
+  }
+
+  &__list {
+    margin-bottom: 40px;
+  }
+
+  &__item {
+    width: 100%;
+    text-align: center;
+  }
+
+  &__link {
+    font-size: 1em;
+    line-height: 2em;
+    text-decoration: none;
+    color: colors.$footer-link-text;
+
+    &:hover {
+      color: colors.$footer-link-text-hover;
+    }
+  }
+}
+
+@import 'medium';
