--- a/W14/css/styles.css
+++ b/W14/css/styles.css
@@ -243,7 +243,7 @@ h6 {
 }
 
 .hero {
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -264,7 +264,7 @@ h6 {
 .hero__subtitle {
   font-family: "Inter";
   font-weight: 300;
-  font-size: 2.1em;
+  font-size: 2em;
   line-height: 2rem;
   color: white;
   margin-bottom: 50px;
@@ -365,7 +365,7 @@ h6 {
 }
 .main .section .wrapper .container h3 {
   margin-bottom: 30px;
-  font-size: 2.7em;
+  font-size: 2em;
   font-weight: 700;
   text-align: center;
   color: white;
@@ -484,9 +484,9 @@ h6 {
   }
 
   .hero {
-    min-height: 250px;
-    height: 50vh;
-    padding: 50px 0;
+    min-height: unset;
+    height: unset;
+    padding: 100px 0;
   }
 
   .main .section {
@@ -515,25 +515,31 @@ h6 {
 .main .section .wrapper--jeep .container article,
 .main .section .wrapper--atv .container article {
     width: 50%;
-    padding-left: 20px;
+    padding-left: 50px;
   }
   .main .section .wrapper--scooter .container h3,
 .main .section .wrapper--jeep .container h3,
 .main .section .wrapper--atv .container h3 {
+    font-size: 4em;
     text-align: left;
   }
   .main .section .wrapper--atv .container {
     flex-direction: row-reverse;
   }
   .main .section .wrapper--atv article {
-    padding-right: 20px;
+    padding-right: 50px;
     padding-left: 0px;
   }
   .main .section .wrapper--atv article h3 {
+    font-size: 3em;
     text-align: right !important;
   }
   .main .section .wrapper--atv .section__summary {
     text-align: right;
+  }
+  .main .section .wrapper--weather .container h3,
+.main .section .wrapper--forecast .container h3 {
+    font-size: 3em;
   }
   .main .section__summary {
     text-align: left;
