--- a/W14/sass/styles.scss
+++ b/W14/sass/styles.scss
@@ -138,8 +138,7 @@ h6 {
 }
 
 .hero {
-  min-height: 100vh;
-  // margin-top: -80px;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -161,7 +160,7 @@ h6 {
   &__subtitle {
     font-family: 'Inter';
     font-weight: 300;
-    font-size: 2.1em;
+    font-size: 2em;
     line-height: 2rem;
     // letter-spacing: -.05em;
     color: colors.$hero-subtitle-text;
@@ -289,7 +288,7 @@ h6 {
 
         h3 {
           margin-bottom: 30px;
-          font-size: 2.7em;
+          font-size: 2em;
           font-weight: 700;
           text-align: center;
           color: colors.$weather-section-title;
