--- a/W14/sass/_colors.scss
+++ b/W14/sass/_colors.scss
@@ -55,6 +55,13 @@ $rental-background-scooter: palette.$orange-800;
 $rental-background-jeep: palette.$blue-800;
 $rental-background-atv: palette.$green-800;
 
+// MAIN RENTAL INFORMATION
+// =================================
+$rentals-section-background-1: palette.$green-200;
+$rentals-section-background-2: palette.$yellow-200;
+$rentals-section-background-3: palette.$blue-100;
+$rentals-section-background-4: palette.$orange-100;
+
 
 // FOOTER
 // =================================
