--- a/W14/sass/_large.scss
+++ b/W14/sass/_large.scss
@@ -26,6 +26,13 @@ $container-width: 1200px;
         }
       }
     }
+
+    .rentals {
+      table {
+        max-width: $container-width;
+        font-size: 1.2em;
+      }
+    }
   }
 
   .footer {
