--- a/W14/sass/_colors.scss
+++ b/W14/sass/_colors.scss
@@ -62,8 +62,16 @@ $rentals-section-background-2: palette.$yellow-200;
 $rentals-section-background-3: palette.$blue-100;
 $rentals-section-background-4: palette.$orange-100;
 
+//  FORM
+$reservation-form-section-background: palette.$blue-800;
+
 
 // FOOTER
 // =================================
 $footer-link-text: palette.$orange-500;
 $footer-link-text-hover: palette.$yellow-400;
+
+
+$maps-section-background-1:palette.$blue-300;
+$maps-section-background-2:palette.$yellow-400;
+$maps-section-background-3:palette.$green-400;
