--- a/W14/sass/_large.scss
+++ b/W14/sass/_large.scss
@@ -33,6 +33,10 @@ $container-width: 1200px;
         font-size: 1.2em;
       }
     }
+
+    .form {
+      max-width: $container-width;
+    }
   }
 
   .footer {
