--- a/W14/sass/styles.scss
+++ b/W14/sass/styles.scss
@@ -156,7 +156,7 @@ h6 {
 
   &__title {
     padding: 0;
-    line-height: 1em;
+    line-height: 1.4em;
     font-family: 'Inter';
     font-size: 5em;
     font-weight: 700;
@@ -169,7 +169,7 @@ h6 {
     font-family: 'Inter';
     font-weight: 300;
     font-size: 2em;
-    line-height: 2rem;
+    // line-height: 2rem;
     // letter-spacing: -.05em;
     color: colors.$hero-subtitle-text;
     margin-bottom: 50px;
@@ -208,6 +208,7 @@ h6 {
 }
 
 .main {
+
   .section {
     position: relative;
     display: flex;
@@ -339,6 +340,11 @@ h6 {
       margin-bottom: 20px;
     }
 
+    img {
+      margin-bottom: 10px;
+      width: 300px;
+    }
+
     ul {
       margin-bottom: 30px;
       list-style: disc;
@@ -351,8 +357,8 @@ h6 {
     table,
     th,
     td {
-      padding: 10px 0;
-      border: 1px solid #555;
+      padding: 15px 0;
+      border: 1px solid #ddd;
     }
 
     table {
@@ -384,6 +390,226 @@ h6 {
       // background-color: colors.$rentals-section-background-4;
     }
   }
+
+  .resources {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 50px;
+    color: white;
+
+    &__list {}
+
+    &__link {
+      font-size: 1em;
+      line-height: 2em;
+      text-decoration: none;
+      color: colors.$footer-link-text;
+
+      &:hover {
+        color: colors.$footer-link-text-hover;
+      }
+    }
+  }
+
+  .section__form {
+    padding: 50px;
+    color: white;
+    background-color: colors.$reservation-form-section-background;
+
+    h3 {
+      margin-bottom: 50px;
+      font-size: 2.5em;
+      font-weight: 300;
+      text-align: center;
+    }
+  }
+
+  .form {
+    font-weight: 300;
+    width: 100%;
+
+    &__fieldset {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      margin-bottom: 50px;
+    }
+
+    &__legend {
+      display: block;
+      margin-bottom: 20px;
+      font-size: 1.5em;
+      font-weight: 300;
+    }
+
+    &__label {
+      width: 100%;
+      margin: 0 20px 20px 0;
+
+      input {
+        display: block;
+        width: 100%;
+        margin-top: 5px;
+        padding: 7px;
+        border: none;
+        border-radius: 3px;
+        font-size: 1em;
+      }
+
+    }
+
+    &__radio_group {
+      width: 100%;
+      margin-bottom: 20px;
+      display: flex;
+      flex-direction: row;
+      align-content: center;
+      justify-content: flex-start;
+
+      &--vertical {
+        flex-direction: column;
+
+        span {
+          margin-bottom: 10px;
+        }
+      }
+    }
+
+    &__radio_label {
+      margin-bottom: 10px;
+      display: flex;
+      flex-direction: row;
+      align-content: center;
+      justify-content: flex-start;
+
+      input {
+        margin: 0 5px 0 20px;
+      }
+    }
+
+    &__textarea {
+      display: block;
+      width: 100%;
+      height: 200px;
+      margin-top: 10px;
+      padding: 10px;
+      font-family: monospace;
+      font-size: 1em;
+      line-height: 1.6em;
+      border: none;
+      border-radius: 3px;
+
+    }
+
+    &__textarea_label {
+      width: 100%;
+      margin: 0 20px 20px 0;
+    }
+
+
+
+    &__button {
+      padding: 10px 50px;
+      font-family: 'Rubik';
+      font-weight: 400;
+      font-size: 1em;
+      color: colors.$hero-button-text;
+      text-decoration: none;
+      background-color: colors.$hero-button-background;
+      border-bottom: 5px solid colors.$hero-button-border;
+      border-top: none;
+      border-left: none;
+      border-radius: 5px;
+      cursor: pointer;
+
+      &:hover {
+        color: colors.$hero-button-text-hover;
+        border-bottom: 5px solid colors.$hero-button-border-hover;
+        background-color: colors.$hero-button-background-hover;
+      }
+
+    }
+  }
+
+  .maps {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 500px;
+    padding: 50px 0;
+    text-align: center;
+    background-color: rgba($color: colors.$maps-section-background-1, $alpha: 1);
+
+    &:nth-child(2) {
+      background-color: rgba($color: colors.$maps-section-background-2, $alpha: 1);
+    }
+
+    &:nth-child(3) {
+      background-color: rgba($color: colors.$maps-section-background-3, $alpha: 1);
+    }
+
+    &__heading {
+      margin: 40px 0;
+      font-size: 3em;
+      font-weight: 300;
+    }
+
+    &__address {
+      color: black;
+      font-weight: 300;
+      line-height: 1.5em;
+
+      h3 {
+        margin: 40px 0;
+        font-size: 2em;
+      }
+    }
+
+    &__form {
+      min-width: 400px;
+      display: flex;
+      flex-direction: column;
+      text-align: left;
+
+      .form__label {
+        margin-bottom: 20px;
+      }
+
+      input {
+        display: block;
+        width: 100%;
+
+      }
+
+      &__button {
+        padding: 10px 50px;
+        font-family: 'Rubik';
+        font-weight: 400;
+        font-size: 1em;
+        color: colors.$hero-button-text;
+        text-decoration: none;
+        background-color: colors.$hero-button-background;
+        border-bottom: 5px solid colors.$hero-button-border;
+        border-top: none;
+        border-left: none;
+        border-radius: 5px;
+        cursor: pointer;
+
+        &:hover {
+          color: colors.$hero-button-text-hover;
+          border-bottom: 5px solid colors.$hero-button-border-hover;
+          background-color: colors.$hero-button-background-hover;
+        }
+      }
+
+    }
+  }
+
+
+
 }
 
 #forecastWrapper {
