--- a/W14/sass/_colors.scss
+++ b/W14/sass/_colors.scss
@@ -75,3 +75,8 @@ $footer-link-text-hover: palette.$yellow-400;
 $maps-section-background-1:palette.$blue-300;
 $maps-section-background-2:palette.$yellow-400;
 $maps-section-background-3:palette.$green-400;
+
+$tours-background-1: palette.$yellow-200;
+$tours-background-2: palette.$blue-300;
+$tours-background-3: palette.$green-600;
+$tours-background-4: palette.$blue-300;
